# PurpleAgentWitty

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: test-and-publish.yml
src/: agent.py  executor.py  mcp_server.py  server.py
